# sim_tp

./: .gitmodules  CMakeLists.txt  README.MD  build.py  main.c  test.py
config/: lv_conf.h  lvgl.cmake
src/: client.c  client.h  lv_port_disp.c  lv_port_indev.c  main.c  png_to_rgb.c  png_to_rgb.h  sim_lcd.c
src/lvgl_porting/: lv_port_disp.c  lv_port_indev.c
src/sim_lcd/: server.py
tool/: log_process.py  png_resize.py
